Fix overflow in footer card deck

--- a/css/styles.css
+++ b/css/styles.css
@@ -256,8 +256,8 @@ h6 {
   position: relative;
   top: 20vh;
   width: 100%;
-  height: 30vh;
-  padding: 10% 0 0 0;
+  height: fit-content;
+  padding: 5% 0 5% 0;
 }
 
 .filters-text {
@@ -390,6 +390,7 @@ h6 {
   /* *****************RESULTS PAGE******************* */
   #filters {
     top: 10vh;
+    height: fit-content;
     padding: 3% 0 3% 0;
   }
 
@@ -443,6 +444,7 @@ h6 {
   .filters-text {
     padding: 2% 0 2% 0 !important;
     height: fit-content;
+    width: 65%;
   }
 
   /* **************** INFO PAGE ******************** */
